...
    >
      <Tabs.Screen
        name="dispatch"
        options={{
          title: 'Dispatch',
          tabBarAccessibilityLabel: 'Dispatch tab',
          tabBarButtonTestID: 'dispatch-tab',
          tabBarIcon: renderDispatchIcon,
        }}
      />

      <Tabs.Screen
        name="reels"
...

      <Tabs.Screen
        name="index"
        options={{
          title: 'Lobby',
          tabBarAccessibilityLabel: 'Lobby tab',
          tabBarButtonTestID: 'home-tab',
          tabBarIcon: renderLobbyIcon,
        }}
      />

      <Tabs.Screen
        name="darkroom"
...
